# CREDIT-CARD-DEFAULT-PREDICTION-ML

./: .gitignore  LICENSE  README.md  app.py  projectflow.txt  pyproject.toml  requirements.txt  setup.py  template.py
.github/workflows/: aws.yaml
config/: schema.yaml
notebook/: Credit_card_default_prediction (1).ipynb  mongoDB_demo.ipynb
src/components/: data_ingestion.py  data_transformation.py  model_evaluation.py  model_trainer.py
src/constants/: __init__.py
src/entity/: artifact_entity.py  config_entity.py
src/pipline/: prediction_pipeline.py  training_pipeline.py
src/utils/: main_utils.py
static/css/: style.css
templates/: creditdata.html
