[project]
name = "src"
version = "0.0.1"
description = "An MLOPS project for Credit Card Default Prediction"
authors = [
    {name = "Abhishek S Mayya", email = "abhishekmayya@gmail.com"},
    {name = "Saikat Samui", email = "saikat@gmail.com"},
    {name = "Shreyansh Acharya", email = "shreyansh@gmail.com"}
]

[tool.setuptools]
packages = {find = {}}

[tool.setuptools.dynamic]
dependencies = {file = "requirements.txt"}
